Commiting changes on frontend

--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -53,7 +53,7 @@
     <div class="col">
 
     </div>
-    <div class="col-6">
+    <div class="col-8">
     <table class="table" >
       <thead>
         <tr>
@@ -78,7 +78,7 @@
           <td></td>
           <td></td>
           <td><button class="btn btn-danger" style="height:35px;" (click)="removeAllItems()">Izbrisi sve</button></td>
-          <td><strong>Ukupno:{{ grandTotal }} rsd </strong></td>
+          <td><strong>Ukupno:{{ grandTotal }},00 rsd </strong></td>
         </tr>
       </tbody>
     </table>
