--- a/src/app/pages/user-profiles/user-profiles/user-profiles.component.html
+++ b/src/app/pages/user-profiles/user-profiles/user-profiles.component.html
@@ -78,6 +78,10 @@
             <label>Uloga:</label>
             <b>{{RoleMessage}}</b>
           </div>
+          <div class="form-group" style="margin-left:5px">
+            <label>Broj izvrsenih kupovina:</label>
+            <b>{{data.purchase_count}}</b>
+          </div>
       </form>
     </div>
     </div>
